--- a/glide.yaml
+++ b/glide.yaml
@@ -1,3 +1,7 @@
 package: github.com/andskur/experemental
 import:
 - package: github.com/boltdb/bolt
+- package: github.com/stretchr/testify
+  version: v1.2.2
+  subpackages:
+  - assert
